update doc agent to support hierarchy targets add gitignore refactor src structure

--- a/pytest.ini
+++ b/pytest.ini
@@ -23,6 +23,7 @@ addopts =
 markers =
     unit: Unit tests
     integration: Integration tests
+    benchmark: Benchmark tests
 
 # Console output
 console_output_style = progress
